--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         
         <!-- html -->
         <div id="html" class="side-nav active">
-            <span class="unit pri-unit active">Introduction</span>
+            <span class="unit pri-unit active">HTML Introduction</span>
 
             <span class="unit pri-unit">Elements
                 <i class="arrow fa-solid fa-angle-down"></i>
