--- a/html/HTML Introduction.html
+++ b/html/HTML Introduction.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../style.css">
-    <title>Introduction</title>
+    <title>HTML Introduction</title>
 </head>
 <body>
     <div class="header">
-        <h1>Introduction</h1>
+        <h1>HTML Introduction</h1>
     </div>
 
     <div class="main">
