--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
     </div>
 
     <div id="main" class="main">
-        <iframe src="html/Introduction.html" id="frame" frameborder="0"></iframe>
+        <iframe src="html/HTML Introduction.html" id="frame" frameborder="0"></iframe>
     </div>
 
     <!-- link scripts -->
