--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         
         <!-- html -->
         <div id="front-html" class="side-nav active">
-            <span class="unit pri-unit active">HTML Introduction</span>
+            <span class="unit pri-unit active">Introduction</span>
 
             <span class="unit pri-unit">Elements
                 <i class="arrow fa-solid fa-angle-down"></i>
@@ -293,7 +293,7 @@
     </div>
 
     <div id="main" class="main">
-        <iframe src="front-html/HTML Introduction.html" id="frame" frameborder="0"></iframe>
+        <iframe src="front-html/Introduction.html" id="frame" frameborder="0"></iframe>
     </div>
 </body>
 </html>
