--- a/front-javascript/JS Introduction.html
+++ b/front-javascript/JS Introduction.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://kit.fontawesome.com/c313c8dbc7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/style.css">
+    <script src="../js/script-detail.js" defer></script>
     <title>Introduction</title>
 </head>
 
@@ -91,6 +92,18 @@
                 </thead>
                 <tbody>
                     <tr>
+                        <td>Expression</td>
+                        <td>
+                            combination of values, variables, and operators<br>
+                            which computes to a value (evaluation)
+                        </td>
+                        <td>
+                            5 * 10<br>
+                            x * 10<br>
+                            "tahbert " + "nguyen"<br>
+                        </td>
+                    </tr>
+                    <tr>
                         <td>Comments</td>
                         <td>single line</td>
                         <td><span class="text-blur">// this is a single comment</span></td>
@@ -131,8 +144,6 @@
             </table>
         </div>        
     </div>
-
-    <script src="../js/script-detail.js" defer></script>
 </body>
 
 </html>
